# talentscout-deccan-catalyst

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
app/: __init__.py  app.py  config.py  models.py
app/data/: candidates.json
app/services/: llm.py  pipeline.py  repository.py  scoring.py
app/templates/: index.html
docs/: architecture.md
tests/: test_app.py
